Changes since version 3.0.1
---------------------------

- Added Glacier2::Router::getCategoryForClient that should be used to
  get the category for use in Glacier2 client callback objects. This
  should be used instead of getServerProxy()->ice_getIdentity().category.

- The Glacier2 router now forwards the context set by the client when calling
  PermissionsVerifier::checkPermissions and SessionManager::create.

- Fixed a bug in the class garbage collector that could result in
  double deallocation of class instances.

Changes since version 3.0.0
---------------------------

- Fixed an assert that could occur during connection establishment if
  the communicator was shutdown or destroyed concurrently.

- IceUtil::Time::toString() has been deprecated and should no longer
  be used. Instead, use IceUtil::Time::toDateTime() to get a date
  and time string. (toString() will continue to work as a synonym for
  two more releases and will then be removed.)

  IceUtil::Time::toDuration() is a new function that returns a
  duration string of the form "days hh:mm:ss.usec". (The number of
  days and micro seconds is printed only if they are non-zero.)

- Fixed a bug in the Slice parser that caused problems if an included
  file contained white space in the file name.

- Fixed a bug where the IceGrid node would fail to retrieve the CPU
  utilization on localized Windows versions.

- The Glacier2 router now logs a warning if a request arrives on an
  unknown connection if Glacier2.Client.Trace.Reject >= 1.

- Fixed a bug in IceGrid on Windows where environment variables set
  in server descriptors would not override those already set in the
  node's environment.

- Fixed a bug in slice2freeze in which using the --output-dir option
  was causing include paths to be modified in generated files.

- Fixed a bug where the IceGrid node, if installed as a Windows
  service, wouldn't correctly start on boot.

- Fixed a bug where the IceGrid node could incorrectly remove